--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,12 +1,19 @@
-.header{
-  width: 100%;
-  height: 60px;
-}
 .header__wrapper{
   width: 92%;
   max-width: 1150px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 auto;
+}
+.header{  
+  width: 100%;
+  z-index: 1000;
+  height: 60px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  position: fixed; 
+  backdrop-filter: blur(10px);
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+  top: 0;
 }
