--- a/src/components/apisodes/card-list-apisodes/episodes.module.css
+++ b/src/components/apisodes/card-list-apisodes/episodes.module.css
@@ -45,10 +45,12 @@
   .date{
     font-size: 14px;
     font-weight: 400;
+    color: #00000099;
   }
-  .episodes{
+  .episode{
     font-size: 14px;
     font-weight: 700;
+    color: #00000099;
   }
   .loat__more{
     width: 154px;
