--- a/src/components/character/character.module.css
+++ b/src/components/character/character.module.css
@@ -1,8 +1,9 @@
 .main_info{
   max-width: 977px;
-  margin: 0 auto;
   display: grid;
-  grid-template: repeat(1, 1fr) / repeat(2, 50%);
+  grid-template: repeat(1, 1fr) / repeat(2, 47%);
+  column-gap: 20px;
+  margin: 47px auto 96px;
 }
 .innformstion{
   display: flex;
@@ -13,6 +14,23 @@
 .main_info_title{
   font-size: 20px;
   font-weight: 500;
+  margin-bottom: 36px;
   color: #8E8E93;
-  margin-left: 25px;
+}
+.episode__info{
+  overflow: auto;
+  height: 379px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 32px;
+  row-gap: 20px;
+  padding-top: 15px;
+}
+.info__pe{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  row-gap: 2px;
 }
