--- a/src/components/header/header-text/header-text.module.css
+++ b/src/components/header/header-text/header-text.module.css
@@ -10,3 +10,47 @@
   font-size: 18px;
   font-weight: 700;
 }
+.header__nav__img {
+  position: fixed;
+  top: 30%;
+  right: 5%;
+  z-index: 1000;
+  display: none;
+}
+
+.header__nav__adaptiv {
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100vh;
+  height: 100vh;
+  background-color: white;
+  z-index: 999;
+}
+
+.header__nav__adaptiv__wrapper {
+  margin-top: 30%;
+  margin-left: 10%;
+  display: flex;
+  row-gap: 38px;
+  flex-direction: column;
+}
+
+.header__nav__adaptiv__link {
+  font-size: 32px;
+  font-weight: 700;
+  color: #000;
+}
+@media  (max-width: 667px) {
+  .container {
+    max-width: 90%;
+  }
+
+  .header__nav__img {
+    display: block;
+  }
+
+  .header__nav {
+    display: none;
+  }
+}
