--- a/src/components/apisodeDetails/pageEpisodeDetail.module.css
+++ b/src/components/apisodeDetails/pageEpisodeDetail.module.css
@@ -1,19 +1,44 @@
 .main{
   max-width: 977px;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: auto;
   margin: 64px auto 35px;
+  padding: 0 24px;
 }
 .card_list{
   display: grid;
-  grid-template: repeat(1, 1fr) / repeat(4, 24%);
+  grid-template: repeat(1, 1fr) / repeat(4, 1fr);
   justify-content: space-between;
-  margin: 24px auto 0;
+  margin-top: 24px;
   row-gap: 24px;
+  column-gap: 20px;
   grid-auto-rows: auto;
 }
 .main_title{
   font-size: 20px;
   font-weight: 500;
   color: #8E8E93;
+}
+
+@media (max-width:970px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(4, 1fr);
+  }
+}
+@media (max-width:770px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(3, 1fr);
+  }
+}
+@media (max-width:580px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
+  }
+}
+@media (max-width:400px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(1, 1fr);
+  }
 }
