--- a/src/components/apisodes/card-list-apisodes/episodes.module.css
+++ b/src/components/apisodes/card-list-apisodes/episodes.module.css
@@ -11,9 +11,16 @@
   padding: 0 25px;
 }
 
+.input__wrapper{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 24px;
+}
 .filter_by_name{
   max-width: 500px;
-  min-width: 312px;
+  width: 100%;
   height: 56px;
   border: 1px solid #00000080;
   border-radius: 8px;
@@ -65,4 +72,19 @@
     border: none;
     outline: none;
     display: block;
+  }
+  @media (max-width:910px){
+    .card__list{
+      grid-template: repeat(1, 128px) / repeat(3, 1fr);
+    }
+  }
+  @media (max-width:770px){
+    .card__list{
+      grid-template: repeat(1, 128px) / repeat(2, 1fr);
+    }
+  }
+  @media (max-width:550px){
+    .card__list{
+      grid-template: repeat(1, 128px) / repeat(1, 1fr);
+    }
   }
