--- a/src/components/character/afiche/afiche-character.module.css
+++ b/src/components/character/afiche/afiche-character.module.css
@@ -14,19 +14,35 @@
 .back{
   position: absolute;
   top: 0;
-  left: 0;
+  left: 25px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.image{
-  max-width: 310px;
-  max-height: 310px;
-  min-width: 146px;
-  min-height: 148px;
-  border-radius: 50%;
-}
+
 .name{
   font-size: 48px;
   font-weight: 400;
+  margin: 0 24px;
+  text-align: center;
+}
+.image_wrapper {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image_wrapper img{
+  max-width: 310px;
+  min-width: 146px;
+  height: auto;
+  border-radius: 50%;
+  margin: 0 24px;
+}
+
+@media (max-width:440px){
+  .image_wrapper{
+    margin-top: 35px;
+  }
 }
