--- a/src/components/character/character.module.css
+++ b/src/components/character/character.module.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template: repeat(1, 1fr) / repeat(2, 47%);
   column-gap: 20px;
+  justify-content: center;
   margin: 47px auto 96px;
 }
 .innformstion{
@@ -33,4 +34,14 @@
   justify-content: center;
   align-items: flex-end;
   row-gap: 2px;
+}
+
+@media (max-width:680px){
+  .main_info{
+    grid-template: repeat(1, 1fr) / repeat(1, 91%);
+    row-gap: 12px;
+  }
+  .main_info_title{
+    margin-bottom: 10px;
+  }
 }
