--- a/src/components/locations/location/location.module.css
+++ b/src/components/locations/location/location.module.css
@@ -1,12 +1,13 @@
 .main{
   max-width: 977px;
-  margin: 0 auto;
-  margin-top: 64px;
+  margin: 64px auto 56px;
+  padding: 0 24px;
 }
 .card_list{
   display: grid;
-  grid-template: repeat(1, 1fr) / repeat(4, 24%);
+  grid-template: repeat(1, 1fr) / repeat(4, 1fr);
   grid-auto-rows: auto;
+  column-gap: 20px;
   row-gap: 24px;
   justify-content: space-between;
 }
@@ -39,4 +40,56 @@
   font-size: 14px;
   font-weight: 400;
   color: #00000099;
+}
+
+@media (max-width:900px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(3, 1fr);
+  }
+}
+@media (max-width:700px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
+  }
+  .text > :first-child{
+    font-size: 27px;
+  }
+  
+  .text > :last-child{
+    font-size: 20px;
+  }
+}
+@media (max-width:590px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
+  }
+  .text > :first-child{
+    font-size: 23px;
+  }
+  
+  .text > :last-child{
+    font-size: 18px;
+  }
+}
+@media (max-width:420px){
+  .text > :first-child{
+    font-size: 20px;
+  }
+  
+  .text > :last-child{
+    font-size: 14px;
+  }
+}
+@media (max-width:340px){
+  .card_list{
+    grid-template: repeat(1, 1fr) / repeat(1, 1fr);
+  }
+
+  .text > :first-child{
+    font-size: 20px;
+  }
+  
+  .text > :last-child{
+    font-size: 14px;
+  }
 }
