--- a/src/components/locations/locations.module.css
+++ b/src/components/locations/locations.module.css
@@ -19,16 +19,21 @@
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+.filter_wrapper{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 .filter_by_name{
   max-width: 500px;
-  min-width: 312px;
+  width: 100%;
   height: 56px;
   border: 1px solid #00000080;
   border-radius: 8px;
   row-gap: 8px;
   display: flex;
   align-items: center;
-  margin: 0 auto 65px;
+  margin: 0 25px 65px;
   padding-left: 25px;
 }
 .filter_by_name input{
@@ -57,4 +62,40 @@
   font-size: 14px;
   font-weight: 400;
   color: #00000099;
+}
+
+@media (max-width: 900px){
+  .card__list{
+    grid-template: repeat(1, 128px) / repeat(3, 1fr);
+  }
+}
+@media (max-width: 730px){
+  .card__list{
+    grid-template: repeat(1, 128px) / repeat(2, 1fr);
+  }
+  .name{
+    font-size: 23px;
+  }
+  .type{
+    font-size: 18px;
+  }
+}
+@media (max-width: 490px){
+  .card__list{
+    grid-template: repeat(1, 128px) / repeat(1, 1fr);
+  }
+  .name{
+    font-size: 24px;
+  }
+  .type{
+    font-size: 20px;
+  }
+}
+@media (max-width: 370px){
+  .name{
+    font-size: 20px;
+  }
+  .type{
+    font-size: 24px;
+  }
 }
